# typus

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  README_8md.html  cmake-format.yaml  dir_3a8cc7b4a5b6c6c34bdb15114d7ff3d2.html  dir_3a8cc7b4a5b6c6c34bdb15114d7ff3d2.js  dir_590401fbb5d9d65c263159e0d40f210c.html  dir_590401fbb5d9d65c263159e0d40f210c.js  dir_590401fbb5d9d65c263159e0d40f210c_dep.map  dir_590401fbb5d9d65c263159e0d40f210c_dep.md5  dir_ed2c5fe623650e08109349954773b040.html  dir_ed2c5fe623650e08109349954773b040.js  dir_ed2c5fe623650e08109349954773b040_dep.map  dir_ed2c5fe623650e08109349954773b040_dep.md5  doxygen_crawl.html  files.html  files_dup.js  flake.nix  goodbye_8hpp.html  goodbye_8hpp.js  goodbye_8hpp__incl.map  goodbye_8hpp__incl.md5  goodbye_8hpp_source.html  graph_legend.html  hello_8cpp.html  hello_8cpp.js  hello_8cpp__incl.map  hello_8cpp__incl.md5  hello_8hpp.html  hello_8hpp.js  (+13 more)
cmake/: Ccache.cmake  CompilerCheck.cmake  Dependencies.cmake  Options.cmake  PackageHelpers.cmake  ProjectConfig.cmake.in  Sanitizers.cmake  StandardFlags.cmake  StaticAnalysis.cmake  TargetHelpers.cmake  TestHelpers.cmake  WorkloadHelpers.cmake
nix/: commonPackages.nix  mkCppShell.nix
search/: all_1.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_d.js  all_e.js  all_f.js  files_0.js  files_1.js  functions_0.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_3.js  pages_6.js  pages_9.js  pages_a.js  (+3 more)
(+20 files in other folders)
